# rustwasmdemo

./: .gitignore  BUILD_SUMMARY.md  Cargo.toml  DOCUMENTATION_INDEX.md  MINIPROGRAM_GUIDE.md  QUICK_REFERENCE.md  README.md  RUST_BEGINNER_GUIDE.md  ZIG_WASM_REFERENCE.md  build-miniprogram.ps1  build-miniprogram.sh  build_zig_wasm.bat  build_zig_wasm.sh  demo.html  index-modules.html  index-nomodules.html  index.html
miniprogram/: README.md  app.json  project.config.json
miniprogram-example/: app.js  app.json
miniprogram-example/pages/index/: index.js  index.wxml  index.wxss
miniprogram/pages/index/: index.js  index.wxml  index.wxss
miniprogram/pages/wasm/: wasm.js  wasm.json  wasm.wxml  wasm.wxss
miniprogram/pages/zigwasm/: zigwasm.js  zigwasm.json  zigwasm.wxml  zigwasm.wxss
miniprogram/utils/: wasm-adapter.js  zig-wasm-adapter.js
pkg/: rustwasmdemo.d.ts  rustwasmdemo.js  rustwasmdemo_bg.wasm.d.ts
pkg-web/: rustwasmdemo.js  rustwasmdemo_bg.wasm
rustwasmdemo1/: Cargo.toml  README.md
rustwasmdemo1/.cargo/: config.toml
rustwasmdemo1/src/: lib.rs
src/: lib.rs
zigwasm/: build.zig  build.zig.zon  build_wasm.zig  simple.wasm  zigwasm.wasm
zigwasm/src/: main.zig  simple.zig
zigwasm/tools/: count-wasm-tables.ps1
